--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -4,6 +4,7 @@
     justify-content: space-evenly;
     height: 100px;
     align-items: center;
+    background-color: #1f1f1f;
     .nleft {
         margin-left: -10%;
         color: white;
@@ -27,9 +28,7 @@
             list-style-type: none;
             
           }
-          .link:hover {
-            color: yellow;
-          }
+
           
       }
     
